--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
     "require": {
         "laravel/installer": "^4.0"
+    },
+    "scripts": {
+      "phpunit": "phpunit",
+      "phpcs": "phpcs"
     }
 }
