--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,8 @@
 serve:
 	php artisan serve --host 0.0.0.0
 
+lint:
+	composer run-script phpcs -- --standard=PSR12 app tests
+
 test:
 	composer run-script phpunit tests
