--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,8 @@
+install:
+	composer install
+	cp -n .env.example .env|| true
+	php artisan key:gen --ansi
+
 serve:
 	php artisan serve --host 0.0.0.0
 
