--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,6 @@
 server {
     listen 80;
-    server_name example.com;
-    root /srv/example.com/public;
+    root /app/src/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
