--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "type": "project",
   "description": "Page analyzer",
   "require": {
-      "laravel/installer": "^4.0"
+      "laravel/installer": "^4.0",
+      "ext-mbstring": "*"
   },
   "scripts": {
     "phpunit": "phpunit",
